fixed some layout issues upon @krobert's request. [#505]

--- a/src/sass/content/_blog.scss
+++ b/src/sass/content/_blog.scss
@@ -2,6 +2,10 @@
 	margin-bottom: 3em;
 	@include container;
 
+	&__entry-header {
+		@extend %side-padding;
+	}
+
 	&__primary {
 		@include breakpoint($bp-medium) {
 			@include span(16);
